# Akhenaten

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  README_2.md  clang_format.sh  com.github.dalerank.akhenaten.json  parsed_text_messages.txt  parsed_text_mm.txt  pharaoh.txt  update-workspace-linux.sh  update-workspace-mac.sh  update-workspace.bat
.ci_scripts/: bintray_conf.sh  package_appimage.sh
.github/: _FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  gameplay.md
.github/workflows/: akhenaten_android.yml  akhenaten_content.yml  akhenaten_flatpak.yml  akhenaten_linux.yml  akhenaten_mac.yml  akhenaten_windows.yml  clang_format.yaml  ozymandias.yml  ozymandias_android.yml  ozymandias_content.yml  ozymandias_linux.yml  ozymandias_mac.yml  ozymandias_windows.yml
android/: akhenaten.keystore  build.gradle  local.properties  settings.gradle
android/SDL2/: build.gradle
android/akhenaten/: build.gradle
android/ozymandias/: build.gradle
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  GenerateVersionHPP.cmake  version.hpp.in.cmake
doc/: BUILDING.md  Pharaoh_testing.CT  RUNNING.md  aqueducts_c3.txt  aqueducts_ph.txt  buffers_size.txt  building_linux.md  building_macos.md  building_scratch.txt  building_type_pharaoh.txt  building_windows.md  buildings_imageids_ph.txt  buildings_ph.txt  data.txt  engine_flow.txt  event_msg_list.txt  event_ph.txt  figures_ph.txt  filepieces_c3.txt  filepieces_c3b.txt  filepieces_ph.ods  filepieces_ph.txt  filepieces_ph_pak.txt  filepieces_ph_structure.txt  group_id_c3.txt  group_id_pharaoh.txt  img_mapping.txt  make_temp.txt  offsets_notes.txt  pak_offsets.txt  pharaoh.txt  pharaoh_datasheets.ods  regex.txt  resources_ph.txt  scratch.clip  sprites_imageids_ph.txt  todo.txt
doc/legacy/: Caesar 3, Pharaoh, Zeus & Emperor - PAK, DAT, 555, SG3, etc - ZenHAX.html  Pharaoh - Data -Farm Production Rates.html  Save files - buildings table - City Builders Forums.html
doc/wiki/: ENG-file-format.md  SAV-file-format.md  SG-file-format.md
ext/expat/: CMakeLists.txt
ext/imgui/: imguifiledialog.cpp  imguifiledialog.h
ext/incbin/: CMakeLists.txt  incbin.c
ext/lame/: CMakeLists.txt
ext/lame/include/: config.h  lame.h
ext/lame/libmp3lame/: lame.c  quantize.c  quantize_pvt.c
ext/mujs/: CMakeLists.txt  jsi.h  jsrun.c  jsvalue.c  jsvalue.h  mujs.h
ext/png/: CMakeLists.txt  pngconf.h
ext/zlib/: CMakeLists.txt
res/: akhenaten.desktop  akhenaten.rc  oaymandias.desktop  ozymandias.rc
src/building/: BUILDING_GRANARY.H  animation.c  animation.cpp  animation.h  barracks.c  barracks.cpp  barracks.h  building.c  building.cpp  building.h  building_academy.cpp  building_academy.h  building_animation.cpp  building_animation.h  building_architect_post.cpp  building_architect_post.h  building_bandstand.cpp  building_bandstand.h  building_barracks.cpp  building_barracks.h  building_bazaar.cpp  building_bazaar.h  building_booth.cpp  building_booth.h  building_brewery.cpp  building_brewery.h  building_bricklayers_guild.cpp  building_bricklayers_guild.h  building_bricks_workshop.cpp  building_bricks_workshop.h  building_burning_ruin.cpp  building_burning_ruin.h  building_cattle_ranch.cpp  building_cattle_ranch.h  building_chariots_workshop.cpp  building_chariots_workshop.h  building_conservatory.cpp  building_conservatory.h  building_courthouse.cpp  building_courthouse.h  (+213 more)
src/city/: buildings.c  buildings.cpp  buildings.h  city.cpp  city.h  city_crime.cpp  city_culure.cpp  city_data.cpp  city_data.h  city_festival.cpp  city_festival.h  city_figures.cpp  city_figures.h  city_fishing_points.cpp  city_fishing_points.h  city_floods.cpp  city_government.cpp  city_health.cpp  city_health.h  city_house_population.cpp  city_house_population.h  city_religion.cpp  city_religion.h  city_religion_properties.cpp  city_religion_supply.cpp  city_resource.cpp  city_resource.h  city_water_supply.cpp  constants.h  coverage.cpp  coverage.h  culture.c  culture.cpp  culture.h  data.c  data.cpp  data.h  data_private.cpp  data_private.h  education.cpp  (+79 more)
src/config/: config.cpp  config.h  hotkeys.cpp  hotkeys.h
src/content/: atlas_packer.cpp  atlas_packer.h  content.cpp  content.h  dir.cpp  dir.h  file_formats.cpp  file_formats.h  imagepak.cpp  imagepak.h  reader.h  vfs.cpp  vfs.h
src/core/: app.cpp  app.h  application.cpp  application.h  archive.cpp  archive.h  backtrace.c  backtrace.cpp  bstring.h  buffer.c  buffer.cpp  buffer.h  calc.c  calc.cpp  calc.h  circullar_buffer.h  config.c  config.cpp  config.h  core.h  core_utility.h  crc32.cpp  crc32.h  dir.c  dir.cpp  dir.h  direction.h  encoding.c  encoding.cpp  encoding.h  encoding_korean.c  encoding_korean.cpp  encoding_simp_chinese.c  encoding_trad_chinese.c  file.c  file.cpp  file.h  file_formats.h  game_environment.c  game_environment.cpp  (+59 more)
src/dev/: debug.cpp  debug.h  imgui_qconsole.cpp  imgui_qconsole.h  qconsole.h
src/editor/: editor.c  editor.cpp  tool.c  tool.cpp  tool.h  tool_restriction.c  tool_restriction.cpp  tool_restriction.h
src/empire/: city.c  city.cpp  city.h  empire.c  empire.cpp  empire.h  empire_city.cpp  empire_city.h  empire_map.cpp  empire_map.h  empire_object.cpp  object.c  object.cpp  object.h  trade_prices.c  trade_prices.cpp  trade_prices.h  trade_route.c  trade_route.cpp  trade_route.h  type.h
src/figure/: action.c  action.cpp  action.h  combat.c  combat.cpp  combat.h  enemy_army.c  enemy_army.cpp  enemy_army.h  figure.c  figure.cpp  figure.h  figure_draw.cpp  figure_explosion_cloud.cpp  figure_names.cpp  figure_names.h  figure_phrase.cpp  figure_phrase.h  figure_properties.cpp  figure_type.h  figure_type_indexes.h  formation.c  formation.cpp  formation.h  formation_enemy.c  formation_enemy.cpp  formation_enemy.h  formation_herd.c  formation_herd.cpp  formation_herd.h  formation_layout.c  formation_layout.cpp  formation_legion.c  formation_legion.cpp  formation_legion.h  formation_rioter.cpp  image.c  image.cpp  image.h  movement.c  (+24 more)
src/figuretype/: animal.c  animal.cpp  animal.h  crime.c  (+157 more)
tools/: pharaoh_pak.bms
(+1118 files in other folders)
